tests/bad/try_member_non_ptr_lhs.oc
/// fail: Cannot use ?. on non-pointer LHS

struct Foo {
    x: &i32
}

def main() {
    let a: Foo
    let b = a?.x
}